# rasterio

./: .buildinfo  .coveragerc  .git-blame-ignore-revs  .gitignore  .mailmap  .nojekyll  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.md  AUTHORS.txt  CHANGES.txt  CITATION.txt  CODE_OF_CONDUCT.txt  CONTRIBUTING.rst  DESIGN.rst  Dockerfile  Dockerfile.wheels  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  api_docs.html  build-linux-wheels.sh  build-wheels.sh  calc.html  cli.html  color.html  community.html  concurrency.html  configuration.html  contributing.html  cookbook.html  data_model.html  developers.html  environment.yml  errors.html  (+74 more)
.github/: dependabot.yml
_modules/: index.html  rasterio.html
_sources/: cli.txt  configuration.txt  contributing.txt  georeferencing.txt  image_options.txt  index.rst.txt  index.txt  installation.txt  intro.rst.txt  intro.txt  masking-by-shapefile.txt  masks.txt  migration.txt  nodata.txt  osgeo_gdal_migration.txt  plotting.txt  python_manual.txt  quickstart.rst.txt  quickstart.txt  rasterio.aws.txt  rasterio.compat.rst.txt  rasterio.control.rst.txt  rasterio.coords.rst.txt  rasterio.coords.txt  rasterio.crs.rst.txt  rasterio.drivers.rst.txt  rasterio.dtypes.rst.txt  rasterio.enums.rst.txt  rasterio.enums.txt  rasterio.env.rst.txt  rasterio.errors.rst.txt  rasterio.features.rst.txt  rasterio.fill.rst.txt  rasterio.io.rst.txt  rasterio.mask.rst.txt  rasterio.merge.rst.txt  rasterio.merge.txt  rasterio.plot.rst.txt  rasterio.profiles.rst.txt  rasterio.rst.txt  (+18 more)
api/: index.html  rasterio.compat.html  rasterio.coords.html  rasterio.crs.html  rasterio.drivers.html  rasterio.dtypes.html  rasterio.enums.html  rasterio.env.html  rasterio.errors.html  rasterio.features.html  rasterio.fill.html  rasterio.html  rasterio.io.html  rasterio.mask.html  rasterio.merge.html  rasterio.plot.html  rasterio.profiles.html  rasterio.sample.html  rasterio.transform.html  rasterio.vfs.html  rasterio.vrt.html  rasterio.warp.html  rasterio.windows.html
benchmarks/: calc.sh  ndarray.py
build-scripts/: macosx-10.6-intel.sh
ci/: config.sh  gdal-compile.sh  get-new-tags.py  get_micromamba_library_path.py  vcpkg.json
cloudformation/: testuser.json
debian/: changelog  control  copyright
docs/: Makefile  api_docs.rst  calc.rst  cli.rst  cli2.rst  color.rst  colormaps.rst  community.rst  concurrency.rst  conf.py  configuration.rst  contributing.rst  cookbook.rst  data_model.rst  datasets.rst  datasets_ndarrays.rst  developers.rst  environment.yml  errors.rst  faq.rst  features.rst  fillnodata.rst  georeferencing.rst  image_options.rst  image_processing.rst  index.rst  installation.rst  intro.rst  masking-by-shapefile.rst  masks.rst  migrating-to-v1.rst  ndarrays.rst  nodata-masks.rst  nodata.rst  options.rst  osgeo_gdal_migration.rst  overviews.rst  plotting.rst  python_manual.rst  quickstart.rst  (+27 more)
examples/: Data visualization.ipynb  async-rasterio.py  concurrent-cpu-bound.py  decimate.py  features.ipynb  introduction.ipynb  parallel.py  polygonize.py  rasterio_polygonize.py  rasterize_geometry.py  reproject.py  sieve.py  thread_pool_executor.py  total.py
lib/: modules.html  rasterio.html  rasterio.rio.html
rasterio/: __init__.py  _base.pxd  _base.pyi  _base.pyx  _copy.pyx  _crs.pxd  _crs.pyx  _drivers.pyx  _env.pxd  _env.pyx  _err.pxd  _err.pyx  _example.pyx  _features.pxd  _features.pyx  _filepath.pyx  _fill.pyx  _gdal.pxd  _io.pxd  _io.pyi  _io.pyx  _loading.py  _manage.pyx  _ogr.pxd  _path.py  _pyvsi.pyx  _pyvsi_handle.cpp  _pyvsi_handle.h  _rat.pxd  _rat.pyx  _shim.pxd  _shim.pyx  _shim1.pyx  _shim20.pyx  _shim21.pyx  _shim24.pyx  _shim30.pyx  _show_versions.py  _transform.pyx  _version.pxd  (+56 more)
scripts/: rasterio.insp  rio  rio_cp  rio_insp  rio_warp  travis_gdal_install.sh  travis_proj_install.sh
snap/: snapcraft.yaml
tests/: README.rst  __init__.py  conftest.py  rangehttpserver.py  test__crs.py  test__env.py  test__version.py  test_aws.py  test_band.py  test_band_masks.py  test_blocks.py  test_boundless_read.py  test_buffered_write.py  test_cache.py  test_checksum.py  test_cli.py  test_cli_main.py  test_colorinterp.py  test_colormap.py  test_complex_dtypes.py  test_concurrency.py  test_coords.py  test_copy.py  test_creation_options.py  test_crs.py  test_data_paths.py  test_dataset.py  test_dataset_features.py  test_dataset_mask.py  test_dataset_rw.py  test_deprecated.py  test_deprecations.py  test_descriptions.py  test_driver_management.py  test_driver_policy.py  test_dtypes.py  test_enums.py  test_env.py  test_err.py  test_ext_base.py  (+111 more)
topics/: calc.html  color.html  concurrency.html  configuration.html  errors.html  features.html  fillnodata.html  georeferencing.html  image_options.html  image_processing.html  index.html  masking-by-shapefile.html  masks.html  memory-files.html  migrating-to-v1.html  overviews.html  plotting.html  profiles.html  reading.html  reproject.html  resampling.html  tags.html  virtual-warped-files.html  (+5 more)
(+307 files in other folders)
