[build-system]
requires = [
    "setuptools>=67.8",
    "wheel",
    "cython~=3.0.2",
    "numpy==2.0.0rc1; python_version >= '3.9'",
    "oldest-supported-numpy; python_version < '3.9'"
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "gdalbin: marks test requiring GDAL binaries",
    "wheel: marks test specific to wheel-building infra",
    "network: marks tests that require network access"
]
