[build-system]
requires = [
    "setuptools>=67.8",
    "wheel",
    "cython~=3.0.2",
    "numpy>=2"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:FilePath is supplanted",
    "ignore:is_valid is not useful",
    "ignore:The given matrix is",
    "ignore:Dataset has no geotransform",
]
markers = [
    "slow: marks tests as slow",
    "gdalbin: marks test requiring GDAL binaries",
    "wheel: marks test specific to wheel-building infra",
    "network: marks tests that require network access"
]
